<resources>
    <string name="app_name">AndroidBasics</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_your_birthdate">Enter your birthdate</string>
    <string name="enter_your_country">enter your country</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="upload_data">Upload Data</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="count">Count</string>
    <string name="set_image">Set Image</string>
    <string name="enter_your_first_number">Enter your first number</string>
    <string name="enter_your_second_number">Enter your second Number</string>
    <string name="plus">+</string>
    <string name="subtract">-</string>
    <string name="multiply">*</string>
    <string name="division">/</string>
    <string name="counter_app">Counter App</string>
    <string name="imageview_app">ImageView App</string>
    <string name="calculator_app">Calculator App</string>
    <string name="welcome_to_our_application">Welcome to our application</string>
    <string name="which_kind_of_burger_you_need_to_order">Which kind of burger you need to order?</string>
    <string name="beef">Beef</string>
    <string name="chicken">Chicken</string>
    <string name="shrimp">Shrimp</string>
    <string name="salad">Salad</string>
    <string name="onions">Onions</string>
    <string name="mionez">Mionez</string>
    <string name="order">Order</string>
    <string name="restaurant">Restaurant</string>
    <string name="logo">Logo</string>
    <string name="hi_there">Hi There,</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_sign_up">Don\'t Have account!! Sign Up</string>
    <string name="register_now">Register Now!!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="register">Register</string>
    <string name="already_have_account_log_in">Already have account!! Log in</string>
    <string name="my_profile">My Profile</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="todo">ToDo</string>
    <string name="profile">Profile</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="todolist_fragment">Todolist Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="fragment_settings">Fragment Settings</string>
    <string name="base_activity">Base Activity</string>
    <string name="eslam_medhat">Eslam Medhat</string>
    <string name="ieslammedat_gmail_com">ieslammedat@gmail.com</string>
    <string name="inbox">Inbox</string>
    <string name="sent">Sent</string>
    <string name="starred">Starred</string>
    <string name="archive">Archive</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="inbox_fragment">Inbox Fragment</string>
    <string name="fragment_starred">Fragment Starred</string>
    <string name="fragment_send">Fragment Send</string>
    <string name="fragment_archive">Fragment Archive</string>
    <string name="navigationdrawer">NavigationDrawer</string>
    <string name="add_todo">Add Todo</string>
    <string name="todolist_app">TodoList APP</string>
    <string name="broadcastreceiver">BroadCastReceiver</string>
    <string name="show_notification">Show Notification</string>
    <string name="norification_app">Norification App</string>
    <string name="add_shopping_item">Add Shopping Item</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="add">ADD</string>
</resources>